feat: implement tagging of WIP articles and update repository interfaces

--- a/deno.json
+++ b/deno.json
@@ -18,6 +18,7 @@
     "sleepLog": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/sleepLog-cli.ts",
     "wake": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/wake-cli.ts",
     "countAllPages": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/count-pages-cli.ts",
+    "tagWip": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/tag-wip-articles-cli.ts",
     "typeCheck": "deno check **/*.ts",
     "fmt": "deno fmt"
   }
