--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,8 @@
     "dayjs/plugin/timezone.js": "npm:dayjs@1.11.10/plugin/timezone.js",
     "playwright": "npm:playwright@1.45.3",
     "dotenv/load.ts": "https://deno.land/std@0.224.0/dotenv/load.ts",
-    "@katayama8000/cosense-client": "jsr:@katayama8000/cosense-client"
+    "@katayama8000/cosense-client": "jsr:@katayama8000/cosense-client",
+    "@google/generative-ai": "npm:@google/generative-ai"
   },
   "nodeModulesDir": "auto",
   "compilerOptions": {
@@ -19,6 +20,7 @@
     "wake": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/wake-cli.ts",
     "countAllPages": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/count-pages-cli.ts",
     "tagWip": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/tag-wip-articles-cli.ts",
+    "summarize": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/summarize-cli.ts",
     "typeCheck": "deno check **/*.ts",
     "fmt": "deno fmt"
   }
