refactor: update type checking command in CI and streamline deno tasks

--- a/deno.json
+++ b/deno.json
@@ -21,7 +21,6 @@
     "countAllPages": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/count-pages-cli.ts",
     "tagWip": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/tag-wip-articles-cli.ts",
     "summarize": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/summarize-cli.ts",
-    "typeCheck": "deno check **/*.ts",
-    "fmt": "deno fmt"
+    "pass": "deno lint && deno fmt && deno check **/*.ts"
   }
 }
