--- a/deno.json
+++ b/deno.json
@@ -6,7 +6,8 @@
     "playwright": "npm:playwright@1.45.3",
     "dotenv/load.ts": "https://deno.land/std@0.224.0/dotenv/load.ts",
     "@katayama8000/cosense-client": "jsr:@katayama8000/cosense-client",
-    "@google/generative-ai": "npm:@google/generative-ai"
+    "@google/generative-ai": "npm:@google/generative-ai",
+    "std/assert/mod.ts": "https://deno.land/std@0.224.0/assert/mod.ts"
   },
   "nodeModulesDir": "auto",
   "compilerOptions": {
