--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,13 @@
 {
   "imports": {
     "@/": "./src/",
-    "dayjs": "npm:dayjs@1.11.10",
-    "dayjs/plugin/timezone.js": "npm:dayjs@1.11.10/plugin/timezone.js",
-    "playwright": "npm:playwright@1.45.3",
+    "dayjs": "npm:dayjs@1.11.19",
+    "dayjs/plugin/timezone.js": "npm:dayjs@1.11.19/plugin/timezone.js",
+    "playwright": "npm:playwright@1.58.2",
     "dotenv/load.ts": "https://deno.land/std@0.224.0/dotenv/load.ts",
-    "@katayama8000/cosense-client": "jsr:@katayama8000/cosense-client",
-    "@google/generative-ai": "npm:@google/generative-ai"
+    "@katayama8000/cosense-client": "jsr:@katayama8000/cosense-client@0.1.7",
+    "@google/generative-ai": "npm:@google/generative-ai@0.24.1",
+    "std/assert/mod.ts": "https://deno.land/std@0.224.0/assert/mod.ts"
   },
   "nodeModulesDir": "auto",
   "compilerOptions": {
@@ -20,7 +21,6 @@
     "wake": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/wake-cli.ts",
     "countAllPages": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/count-pages-cli.ts",
     "tagWip": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/tag-wip-articles-cli.ts",
-    "summarize": "deno run --allow-net --allow-env --allow-read --allow-run --allow-sys --allow-write src/infrastructure/cli/summarize-cli.ts",
-    "pass": "deno lint && deno fmt && deno check **/*.ts"
+    "pass": "deno lint && deno fmt && deno check **/*.ts && deno test"
   }
 }
