--- a/.github/workflows/cli_runner.yml
+++ b/.github/workflows/cli_runner.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Run the CLI
         env:
           SCRAPBOX_SID: ${{ secrets.SCRAPBOX_SID }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: deno task ${{ inputs.cli_command }}
 
       - name: Notify Discord
